# snow-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  book.toml  clippy.toml  pi-session-2026-05-11T20-37-48-499Z_019e18c2-9f52-700d-9f30-17a8e24c235b.html
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.claude/: e2e-results-a.md  e2e-results-b.md  e2e-results-regression.md  e2e-task-a.md  e2e-task-b.md  e2e-task-regression.md
.claude/skills/creating-videos/: SCENE_AUTHORING.md  SKILL.md  nori.json
.claude/skills/creating-videos/audio/: demouth.py  make_music_tracks.py
.claude/skills/creating-videos/template/: brand.css  capture.mjs  engine.js  index.html
.claude/skills/creating-videos/template/scenes/: example-scene.js
.codebase-memory/: artifact.json  graph.db.zst
.github/: pull_request_template.md
.github/workflows/: ci.yml  external-pr-policy.yml  pages.yml  release.yml  security.yml
.serena/: project.yml
.tokensave/: branch-meta.json  config.json  tokensave.db-shm
docs/: PLAN.md
docs/adr/: 0001-use-rust.md  0002-noun-verb-commands.md  0003-os-keychain-credentials.md  0004-toml-config-format.md  0005-json-error-output.md  0006-profile-resolution-and-command-ux.md  0007-release-validation-pipeline.md  README.md
docs/backlog/: README.md  phase-1-foundation.md  phase-2-auth.md  phase-3-table-api.md  phase-4-commands.md  phase-5-distribution.md
docs/book/: SUMMARY.md  commands.md  configuration.md  github-pages.md  installation.md  introduction.md  oauth-authorization-code-pkce.md  pdi-testing.md  reference.md  secure-readonly-usage.md
docs/book/commands/: api.md  attachment.md  auth.md  codesearch.md  completions.md  data.md  graphql.md  import-set.md  profile.md  scope.md  script.md  seed.md  skill.md  snu.md  table.md
docs/book/theme/: snow.css
docs/design/: README.md  authentication.md  data-import-export.md  http-client.md  read-only-mode.md
docs/guides/: README.md  adding-commands.md  releasing.md  sn-utils-implementation-guide.md  testing.md
docs/notes/: 2026-02-09-cli-ux-review.md
docs/planning/: 78-graphql-query-command.md  80-lints-dead-code.md  81-newtype-parse-dont-validate.md  82-module-boundaries.md  83-split-oversized-modules.md
docs/site/: README.md  astro.config.mjs  package-lock.json  package.json
docs/site/public/: index.html
docs/site/src/: navigation.ts  version.ts
docs/site/src/content/docs/: commands.md  configuration.md  installation.md  introduction.md  oauth-authorization-code-pkce.md  pdi-testing.md  quick-start.md  secure-readonly-usage.md
docs/site/src/layouts/: DocsLayout.astro
docs/site/src/pages/: [...slug].astro  index.html  llms-full.txt.ts  llms.txt.ts
landing/: index.html
prompts/agents/: README.md  documentation-maintainer.md  e2e-tester.md  marketing-manager.md  release-manager.md  reviewer.md
scripts/: check-secret-fields.sh  e2e-coverage  e2e-run  install.ps1  install.sh  release-pipeline  run-agent  secret-fields-baseline.txt
scripts/e2e-snu-harness/: harness.js  package-lock.json  package.json
scripts/lib/: e2e_scenario.py  test_e2e_scenario.py
src/: error.rs  lib.rs  main.rs  policy.rs
src/auth/: api_key.rs  basic.rs  browser_session.rs  mod.rs  oauth2.rs  saml.rs
src/cli/: args.rs  io.rs  mod.rs  output.rs  readonly_args.rs  spinner.rs  truncation.rs  validation.rs
src/cli/args/: api.rs  attachment.rs  auth.rs  codesearch.rs  data.rs  graphql.rs  import_set.rs  profile.rs  scope.rs  script.rs  seed.rs  skill.rs  snu.rs  table.rs
src/cli/commands/: api.rs  attachment.rs  auth.rs  codesearch.rs  completions.rs  config.rs  data.rs  graphql.rs  import_set.rs  incident.rs  mod.rs  scope.rs  script.rs  seed.rs  skills.rs  snu.rs  table.rs
src/cli/commands/config/: mod.rs  now_sdk.rs  output.rs  profiles.rs  tests.rs
src/cli/commands/data/: flat.rs  mod.rs  package.rs  tests.rs  types.rs
src/cli/commands/scope/: inventory.rs  list.rs  mod.rs  move_file.rs  tests.rs  types.rs
src/cli/commands/snu/: browser.rs  mod.rs  mutations.rs  record_ops.rs  records.rs  response.rs  session.rs  tests.rs
src/client/: core.rs  debug.rs  error.rs  mod.rs  pagination.rs  session.rs  table.rs  test_support.rs  transport.rs
src/config/: credentials.rs  keychain.rs  mod.rs  now_sdk.rs  profile.rs
src/models/: attachment.rs  identifiers.rs  incident.rs  mod.rs  record.rs  secret.rs
src/snu/: bridge.rs  broker.rs  daemon.rs  mod.rs  protocol.rs  session_cache.rs
tests/: e2e_runner.rs  structure.rs  test_api_script.rs  test_attachment.rs  test_cli.rs  test_codesearch.rs  test_data.rs  test_graphql.rs  test_import_set.rs  test_scope.rs  test_skills.rs  test_table.rs
tests/common/: mod.rs
tests/e2e/: README.md
tests/e2e/fixtures/import-set/: provision.js  teardown.js
tests/e2e/scenarios/: completions.toml  graphql.toml
tests/e2e/scenarios/api/: delete.toml  get.toml  post.toml  put.toml
tests/e2e/scenarios/attachment/: download.toml  list.toml  upload.toml
tests/e2e/scenarios/auth/: login.toml  logout.toml  status.toml  token.toml
tests/e2e/scenarios/codesearch/: search.toml
tests/e2e/scenarios/data/: export-package.toml  export.toml  import.toml  validate.toml
tests/e2e/scenarios/import-set/: load.toml  transform.toml
tests/e2e/scenarios/profile/: add.toml  current.toml  default.toml  edit.toml  find.toml  list.toml  output.toml  remove.toml  show.toml
tests/e2e/scenarios/profile/sdk/: export.toml  (+2 more)
tests/e2e/scenarios/scope/: inspect.toml  inventory.toml  list.toml  move-file.toml
tests/e2e/scenarios/script/: run.toml
tests/e2e/scenarios/seed/: apply.toml  cleanup.toml  plan.toml
tests/e2e/scenarios/snu/: app-meta.toml  attachment-upload.toml  check-connection.toml  create-record.toml  delete-record.toml  execute-bg-script.toml  get-instance-info.toml  get-record.toml  list-tables.toml  query.toml  schema.toml  screenshot.toml  slash.toml  update-record.toml  wait-token.toml
tests/e2e/scenarios/table/: create.toml  delete.toml  get.toml  list.toml  schema.toml  stats.toml  update.toml
(+23 files in other folders)
