[package]
name = "snow-cli"
version = "0.3.0"
edition = "2024"
description = "CLI gateway for LLMs and coding agents to access ServiceNow instances"
license = "MIT"
repository = "https://github.com/your-org/snow-cli"
keywords = ["servicenow", "cli", "api", "automation"]
categories = ["command-line-utilities"]

[[bin]]
name = "snow-cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
toon-format = { version = "0.4.5", default-features = false }

# Credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# HTTP header types
http = "1"

# Base64 encoding (for Basic auth)
base64 = "0.22"
rpassword = "7.4.0"
open = "5.3.4"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
# HTTP mocking
wiremock = "0.6.2"

# CLI testing
assert_cmd = "2"
predicates = "3"

# Temp files for config tests
tempfile = "3"

# Async test support
tokio-test = "0.4"

[workspace]
members = ["."]
resolver = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
allow-dirty = ["ci"]
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
