[package]
name = "snow-cli"
version = "0.4.0"
edition = "2024"
description = "CLI gateway for LLMs and coding agents to access ServiceNow instances"
license = "MIT"
repository = "https://github.com/ewatch/snow-cli"
homepage = "https://github.com/ewatch/snow-cli"
categories = ["command-line-utilities"]

[[bin]]
name = "snow-cli"
path = "src/main.rs"

[[bin]]
name = "snow-cli-ro"
path = "src/bin/snow-cli-ro.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.18"

# Async runtime
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
toon-format = { version = "0.4.5", default-features = false }

# Credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# HTTP header types
http = "1"

# Base64 encoding (for Basic auth and SN-Utils attachment payloads)
base64 = "0.22"
rpassword = "7.4.0"
open = "5.3.4"
rand = "0.9.3"
sha2 = "0.10"
futures-util = "0.3"
tokio-tungstenite = "0.24"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# HTTP mocking
wiremock = "0.6.2"

# CLI testing
assert_cmd = "2"
predicates = "3"

# Temp files for config tests
tempfile = "3"

# Async test support
tokio-test = "0.4"

[workspace]
members = ["."]
resolver = "3"

[profile.dist]
inherits = "release"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.27.0"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The installers to generate for each app.
# Homebrew is intentionally NOT listed here: the formula is owned and
# auto-updated by the separate tap repo (ewatch/homebrew-tap) via its
# update-formula.yml workflow, which is the single source of truth.
installers = []
