[package]
name = "snow-cli"
version = "0.5.1"
edition = "2024"
description = "CLI gateway for LLMs and coding agents to access ServiceNow instances"
license = "MIT"
repository = "https://github.com/ewatch/snow-cli"
homepage = "https://github.com/ewatch/snow-cli"
categories = ["command-line-utilities"]
keywords = ["servicenow", "cli", "automation", "agent", "rust"]

[lints.rust]
future_incompatible = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
complexity = "warn"
correctness = "warn"
dbg_macro = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"

[[bin]]
name = "snow-cli"
path = "src/main.rs"

[[bin]]
name = "snow-cli-ro"
path = "src/bin/snow-cli-ro.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.18"

# Async runtime
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "1.1"
toon-format = { version = "0.5.0", default-features = false }

# Credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# HTTP header types
http = "1"

# Base64 encoding (for Basic auth and SN-Utils attachment payloads)
base64 = "0.22"
rpassword = "7.4.0"
open = "5.3.4"
rand = "0.10.1"
sha2 = "0.11"
futures-util = "0.3"
tokio-tungstenite = "0.24"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

# Detach the SN-Utils broker into its own session so it survives the spawning
# command's process group (setsid). Unix only; Windows uses creation flags.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# HTTP mocking
wiremock = "0.6.2"

# CLI testing
assert_cmd = "2"
predicates = "3"

# Temp files for config tests
tempfile = "3"

# Async test support
tokio-test = "0.4"

[workspace]
members = ["."]
resolver = "3"
